добавил z-index для кнопок под картинкой и сделал демонстарцию всех елементов

--- a/index.html
+++ b/index.html
@@ -95,35 +95,35 @@
           <span id="lblTitle" class="i_want_page2">Uploading</span>
 
           <!--block for image---start---------------------------->
-          <!--<div id="image" class="slide wrap_img">-->
-            <!--<div class="carousel-inner">-->
-              <!--<div class="item active">-->
-                <!--<a class="fancybox"-->
-                   <!--href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'-->
-                   <!--data-fancybox-group="gallery"-->
-                   <!--title='127     Google Chrome'>-->
-                  <!--<img class="img-fluid center-block"-->
-                       <!--src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'-->
-                       <!--alt='127     Google Chrome'-->
-                  <!--/>-->
-                <!--</a>-->
-                <!--<div class="fb-like" data-href='https://bringScreen.com/CnA07BBD7pSqCJr' data-layout="button"-->
-                     <!--data-action="like" data-show-faces="true"-->
-                     <!--data-share="true"></div>-->
-              <!--</div>-->
-            <!--</div>-->
-            <!--<div class="text_detecter-menu dropdown">-->
-              <!--<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">-->
-                <!--Text detect-->
-                <!--<span class="caret"></span>-->
-              <!--</button>-->
-              <!--<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">-->
-                <!--<li><a href='/screen-text-detect.aspx?url=CnA07BBD7pSqCJr&lang=eng'>English</a></li>-->
-                <!--<li><a href='/screen-text-detect.aspx?url=CnA07BBD7pSqCJr&lang=rus'>Russian</a></li>-->
-              <!--</ul>-->
-              <!--<input type="button" class="text_detecter-btn" value="Распознать">-->
-            <!--</div>-->
-          <!--</div>-->
+          <div id="image" class="slide wrap_img">
+            <div class="carousel-inner">
+              <div class="item active">
+                <a class="fancybox"
+                   href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
+                   data-fancybox-group="gallery"
+                   title='127     Google Chrome'>
+                  <img class="img-fluid center-block"
+                       src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
+                       alt='127     Google Chrome'
+                  />
+                </a>
+                <div class="fb-like" data-href='https://bringScreen.com/CnA07BBD7pSqCJr' data-layout="button"
+                     data-action="like" data-show-faces="true"
+                     data-share="true"></div>
+              </div>
+            </div>
+            <div class="text_detecter-menu dropdown">
+              <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                Text detect
+                <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                <li><a href='/screen-text-detect.aspx?url=CnA07BBD7pSqCJr&lang=eng'>English</a></li>
+                <li><a href='/screen-text-detect.aspx?url=CnA07BBD7pSqCJr&lang=rus'>Russian</a></li>
+              </ul>
+              <input type="button" class="text_detecter-btn" value="Распознать">
+            </div>
+          </div>
           <!--block for image---end------------------------------>
 
 
