заменил фансибокс на 3-ью версию и заменил картинки

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="https://www.w3.org/1999/xhtml">
+<html lang="ru" xmlns="https://www.w3.org/1999/xhtml">
 
 <head>
   <meta charset="utf-8">
@@ -15,6 +15,7 @@
   <link href="css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>
   <link href="css/jquery.fancybox.css" rel="stylesheet" type="text/css"/>
   <link href="css/style_page2.css" rel="stylesheet" type="text/css"/>
+  <meta property="og:locale" content="ru_RU">
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://bringScreen.com/CnA07BBD7pSqCJr"/>
   <meta property="og:title" content="BringScreen - share your screen"/>
@@ -99,11 +100,12 @@
             <div class="carousel-inner">
               <div class="item active">
                 <a class="fancybox"
-                   href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
-                   data-fancybox-group="gallery"
+                   href='https://source.unsplash.com/mr_Tg4SI66A/1500x1000'
+                   data-fancybox="images"
+                   data-small-btn="true"
                    title='127     Google Chrome'>
                   <img class="img-fluid center-block"
-                       src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
+                       src='https://source.unsplash.com/mr_Tg4SI66A/1500x1000'
                        alt='127     Google Chrome'
                   />
                 </a>
@@ -143,11 +145,11 @@
             <div class="carousel-inner">
               <div class="item active">
                 <a class="fancybox"
-                   href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
-                   data-fancybox-group="gallery"
+                   href='https://source.unsplash.com/vddccTqwal8/1500x1000'
+                   data-fancybox="group"
                    title='127     Google Chrome'>
                   <img class="img-fluid center-block"
-                       src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
+                       src='https://source.unsplash.com/vddccTqwal8/1500x1000'
                        alt='127     Google Chrome'
                   />
                 </a>
@@ -157,11 +159,11 @@
               </div>
               <div class="item">
                 <a class="fancybox"
-                   href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
-                   data-fancybox-group="gallery"
+                   href='https://source.unsplash.com/Lzx4J_Pb3sk/1500x1000'
+                   data-fancybox="group"
                    title='127     Google Chrome'>
                   <img class="img-fluid center-block"
-                       src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
+                       src='https://source.unsplash.com/Lzx4J_Pb3sk/1500x1000'
                        alt='127     Google Chrome'
                   />
                 </a>
@@ -171,11 +173,11 @@
               </div>
               <div class="item">
                 <a class="fancybox"
-                   href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
-                   data-fancybox-group="gallery"
+                   href='https://source.unsplash.com/sYegwYtIqJg/1500x1000'
+                   data-fancybox="group"
                    title='127     Google Chrome'>
                   <img class="img-fluid center-block"
-                       src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
+                       src='https://source.unsplash.com/sYegwYtIqJg/1500x1000'
                        alt='127     Google Chrome'
                   />
                 </a>
@@ -185,11 +187,11 @@
               </div>
               <div class="item">
                 <a class="fancybox"
-                   href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
-                   data-fancybox-group="gallery"
+                   href='https://source.unsplash.com/Sj5efgWguDs/1500x1000'
+                   data-fancybox="group"
                    title='127     Google Chrome'>
                   <img class="img-fluid center-block"
-                       src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
+                       src='https://source.unsplash.com/Sj5efgWguDs/1500x1000'
                        alt='127     Google Chrome'
                   />
                 </a>
