замена шапки на ту, что в шаблоне, добавил шрифт Deys

--- a/index.html
+++ b/index.html
@@ -45,19 +45,15 @@
           </a>
         </div>
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 pad0 header_page2_centerDiv ">
-          <p class="header_page2_center">
-            <a href='/' class="header_page2_center">Download the screenshots maker for free</a>
-          </p>
-          <br/>
-          <ul class="ul_header_page2" style="margin-left:10px;">
-            <li class="see_img">
-              <span id="lblCount">8</span>
-            </li>
-            <li class="date_img">
-              <span id="lblDateTime">2/26/2018 7:18:26 PM</span>
-            </li>
+          <ul class="ul_header_page2">
             <li class="name_img">
               <span id="lblOwnerName">Stefan Tomylo</span>
+            </li>
+            <li class="date_img">
+              <span id="lblDateTime">2/26/2018</span>
+            </li>
+            <li class="see_img">
+              <span id="lblCount">8</span>
             </li>
             <li>
               <a href="#" class="info_page2"
@@ -73,6 +69,9 @@
               </a>
             </li>
           </ul>
+          <a href='/' class="download-btn">
+            <span>Download program now</span>
+          </a>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 pad0">
           <ul class="soсial_networks">
@@ -95,7 +94,7 @@
         <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 pad0 wrapper_carousel">
           <span id="lblTitle" class="i_want_page2">Uploading</span>
 
-          <!--block for image---start---------------------------->
+          <!--image---start---------------------------->
           <div id="image" class="slide wrap_img">
             <div class="carousel-inner">
               <div class="item active">
@@ -115,9 +114,9 @@
               </div>
             </div>
           </div>
-          <!--block for image---end------------------------------>
+          <!--image---end------------------------------>
 
-          <!--block for carousel---start-------------------------->
+          <!--carousel---start-------------------------->
           <div id="carousel-example-generic" class="carousel slide wrap_carousel" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
@@ -196,9 +195,9 @@
               <span class="glyphicon slider-btn-right"></span>
             </a>
           </div>
-          <!--block for carousel---end---------------------------->
+          <!--carousel---end---------------------------->
 
-          <!--block for detected text---start----------------->
+          <!--detected text---start----------------->
           <div class="carousel-inner wrap_detect-text">
           <div class="detect-text">
             <p>
@@ -206,8 +205,9 @@
             </p>
           </div>
           </div>
-          <!--block for detected text---end------------------->
+          <!--detected text---end------------------->
 
+          <!--btn detecting text---start------------------->
           <div class="text_detecter-menu dropdown">
             <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
               Text detect
@@ -219,6 +219,7 @@
             </ul>
             <input type="button" class="text_detecter-btn" value="Распознать">
           </div>
+          <!--btn detecting text---end--------------------->
 
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 pad0 banner_right_page2">
